# local-agent

./: .env.example  .gitignore  Cargo.toml  README.md  agent.py  context.py  tools.py
.github/workflows/: release.yml
python/: llm_client.py  todo_manager.py
skills/git-commit/: SKILL.md
src/: context.rs  llm_client.rs  main.rs  skills.rs  todo_manager.rs  tools.rs
