[package]
name = "local-agent"
version = "0.1.0"
edition = "2021"
description = "A local CLI coding agent powered by llama-server (OpenAI-compatible API)"

[[bin]]
name = "local-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
